<resources>
    <string name="app_name">DIU</string>
    <string name="app_title">Dhaka International University</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dhaka International University</string>
    <string name="nav_header_subtitle">Student Portal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_class_routine">Class Routine</string>
    <string name="menu_notice">Notice Board</string>
    <string name="menu_accounts">Account Details</string>
    <string name="menu_result">Academic Result</string>
    <string name="menu_academic_calender">Academic Calendar</string>
    <string name="menu_administration">Administration</string>
    <string name="menu_faculity_member">Board of Trustee</string>
    <string name="menu_student_comunity">Students Community</string>
    <string name="menu_transport">Transport</string>
    <string name="menu_gallery">Photo Gallery</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_rules_regulation">Rules and Regulations</string>
    <string name="menu_exam_guidline">Examination Guideline</string>
    <string name="menu_credit_transfer">Credit Accept/Transfer</string>
    <string name="menu_admission">Admission</string>
    <string name="menu_depertment">Departments</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="text_admission_req">For Undergraduate/ Honors Program:

\n-->> Original Transcript \u0026 Certificate of S.S.C. or Equivalent with 2 photocopies.
\n-->> Original Transcript \u0026 Certificate of H.S.C. or Equivalent with 2 photocopies.
\n-->> 7 Copies of Pass Port size Photograph .
\n-->> For Master’s / Graduate Program:
\n-->> Original Transcript \u0026 Certificate of S.S.C. or Equivalent with 2 photocopies.
\n-->> Original Transcript \u0026 Certificate of H.S.C. or Equivalent with 2 photocopies.
\n-->> Original Transcript \u0026 Certificate of Undergraduate/ Honor’s Program with 2 photocopies.
\n-->> 7 Copies of Pass Port size Photograph .</string>
    <string name="text_admission">Candidates seeking admission must apply in prescribed application Form which can be collected on payment of Tk. 1000.00 Candidates having 2nd division or at least GPA 2.50 in both SSC \u0026 HSC examinations, or their equivalents are eligible to apply for admission into Honours program in Law,English, Sociology and Business Administration. For B.Sc in (Computer Science u0026 Engineering), B.Sc.( Electrical, Electronics and Telecommunication Engineering) and B.Sc (Civil Engineering) programs, candidate must have physics \u0026 Mathematics at their HSC level.For Bachelor of Pharmacy (B.Pharm.) program, candidates must have Biology \u0026 Chemistry at their HSC level.For LL.M (2 years), M.A English (2.5 Years), MSS Sociology (2 Years), MHRL, and MBA programs, the applicants must have at least Bachelor Degree with GPA-2.00 (minimum). For LL.M (2 Years), student must complete LL.B (Pass) Course.</string>
    <string name="text_about">Dhaka International University (DIU) is one of the leading, familiar and note-worthy private universities in Bangladesh which was established on 7th April 1995. It is a non-profitable institution having strict academic discipline. This university was founded by Late Alhaj Professor Dr. A. B. M. Mafizul Islam Patwari, Former Chairman of the Department of Law, University of Dhaka, Bangladesh. It is recognized that Dhaka International University is such a private university, which was founded by a person who was a renowned humanist and academician. He established this university with high hopes and aspirations to disseminate knowledge and thus to extend the horizon of knowledge. That is why, the motto of DIU is the universal adage, "Knowledge is Power". DIU generates this power of Knowledge in an individual through teaching-learning, training, research and guidance by using modern, pragmatic and well-designed curriculum and syllabus.</string>
    <string name="text_mission">The mission of DIU is to produce capable leaders in the respective field of study who can meet the challenges of present dynamic world. It wants to create multidisciplinary knowledge, communication and interpersonal skills at the highest level of excellence among the students which will make them honest, sincere and dedicated in their thoughts and deeds.</string>
    <string name="text_vission">The vision of DIU is to contribute to the nation by producing age-worthy, pragmatic and eligible graduates through continual innovation in education and research.</string>
    <string name="dept_business_introduction">The University Grants Commission of Bangladesh (UGC) was established by the Presidential Order (P.O. No 10 of 1973) of the Government of the People\’s Republic of Bangladesh. In fact, UGC is the regulatory body of all public and private universities in Bangladesh. Three categories of university such as public, private and international universities are working to ensure higher education in Bangladesh.

\n \n In Bangladesh, private university started its journey after the constitution of the Private University Act 1992. At present, all private universities are being operated under the Private University Act 2010. There are 95 private universities in Bangladesh (up to January, 2017). Dhaka International University is one of the first generation private universities in Bangladesh.
</string>
    <string name="dept_business_mission">To educate students in a communicative and interactive learning environment in line with program outcomes and to empower them to meet the business challenges with strong ethical values and responsibilities.</string>
    <string name="dept_business_vission">To produce eligible and competent business graduates through a standard curriculum who will be able to serve the society as business leaders in the global perspective.</string>
    <string name="dept_civil_introduction">The Department of Civil Engineering is one of the largest department in the Faculty of Science \u0026 Engineering. The department has produced several eminent engineers who have made important contributions in the planning and execution of many important Civil Engineering projects in Bangladesh as well as abroad.

\n\nThe Department offers two shift (Day and Ev ening) undergraduate courses in Civil Engineering. In all, there are around 1000 students , including I nternational students, in undergraduate program for pursuing their Bachelor degree. The Department is known for its reputed faculty with expertise in dive rse fields. Presently, the department has 20 highly qualified, experienced, sincere and dedicated teaching faculty members, actively participating in research and consultancy work. During last 5 years, faculty members have published more than 2 0 papers in reputed refereed International Journals.
\n\nOver a period of time, the Department has built up a wide research potential.Major area of research in the Department include; Sustainable Development, low cost sanitation, water treatment, air, noise and water qua lity modelling, Reuse of concrete, application of GIS and remote sensing in water resources and environment, Vulnerability assessment, Seismic analysis of structures, retrofitting, Soil structure interaction, Hydro - climatology, Water resource assessment an d management.
\n\nThe Department has established a state of the art experimental facilities and laboratories in different fields of Civil Engineering. International and national conferences, seminars and special lectures are a regular feature of the Department to impart education and training. Leading companies in construction sector in Bangladesh and public divisions are regular recruiter of our students and many students have been selected in Engineering Services.
\n\nThe Department strongly believes in continuous efforts to strive for excellence by exploring new frontiers of knowledge, imparting the latest technical knowledge to the students and conducting high quality research.
</string>
    <string name="dept_civil_mission">--> To offer Under - Graduate and Post - Graduate programs in civil engineering and other skill development courses that add value to student competencies.
\n\n--> To establish centers of excellence in emerging areas of research.
\n\n--> To promote innovative and original thinking in the minds of budding engineers to face the challenges of future .
\n\n--> To have regular interaction with industry and offer solutions to their problems.
\n\n--> To provide knowledge base and consu ltancy services to the community in all areas of civil engineering.
\n\n--> To introduce moral and ethical values among the students
</string>
    <string name="dept_civil_vission">To acquaint knowledge and excellence that brings out to our graduates with high technical competencies and promotes hig h - end research which m akes them ethically strong engineers to build our nation.</string>
    <string name="dept_cse_introduction">The Department of Computer Science and Engineering (CSE) at Dhaka International University (also known as DIU) is a place where brightest minds from all over the country and abroad assembles for a greater future. We have a strong alumni association to exchange academic and professional knowledge and experience among the existing and former students of DIU in the field of CSE. Our alumni serve in the top ranking universities as teachers and researchers and in the top companies all around the world as software engineers and IT specialists. We organize various co-curricular and extra-curriculum activities. Such as Programming contest, Workshop, job Fair, The Debating Club, Seminar, Intra-Department Football/Cricket Tournament, Indoor Games, etc. Our students are well equipped to take the challenge to stand out as the leaders of tomorrow. We welcome all in our community who are willing to take the challenge and who are trying to be the best in their future. Welcome to CSEDIU.</string>
    <string name="dept_cse_mission">The mission of department of computer Science and Engineering (CSE) is to teach and prepare educated, skilled, \u0026 ethically sound computer scientists and engineers for leadership and professional careers and for advanced studies.</string>
    <string name="dept_cse_vission">To produce competent professionals who shall be leaders in technology, industry and research at the national and international level.</string>
    <string name="menu_library">Library</string>
</resources>